# libmoonshine

./: CMakeLists.txt  README.md  readme
src/: moonshine.cpp  moonshine.h
test/: test.cpp
